# wspace

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/: wspace.cmake  wspace_googletest.cmake  wspace_module.cmake  wspace_parse_arguments.cmake
libs/: CMakeLists.txt
libs/model/src/: CMakeLists.txt
libs/model/src/wspace/: asteroid.hpp  player.cpp  player.hpp  station.cpp  station.hpp
libs/utility/src/: CMakeLists.txt
libs/utility/src/wspace/: affine_space.cpp  affine_space.hpp  affine_space.utest.cpp  point.hpp  vector.hpp  vector.utest.cpp
libs/utility/src/wspace/utility_detail/: apply_integer_sequence.cpp  apply_integer_sequence.hpp  apply_integer_sequence.utest.cpp  array.hpp  array.utest.cpp
modules/gfx/: CMakeLists.txt
modules/gfx/src/wspace/gfx/: asteroid_renderer.cpp  asteroid_renderer.hpp  perspective_camera.cpp  perspective_camera.hpp  ship_renderer.cpp  ship_renderer.hpp  station_renderer.cpp  station_renderer.hpp
modules/gfx/src/wspace/gfx/ogl/: array.cpp  array.hpp  buffer.cpp  buffer.hpp  (+6 more)
modules/runtime/: CMakeLists.txt
modules/runtime/src/wspace/runtime/: position.hpp  renderer.cpp  renderer.hpp
modules/support/: CMakeLists.txt
modules/support/src/wspace/support/: apply_integer_sequence.hpp  apply_integer_sequence.utest.cpp  on_scope_exit.cpp  on_scope_exit.hpp  on_scope_exit.utest.cpp  vector.hpp  vector.utest.cpp  wrapper.hpp  wrapper.utest.cpp
src/: CMakeLists.txt
src/wspace-client/: CMakeLists.txt  main.cpp  wspace-client.cpp
src/wspace-client/shaders/: quad.geom  trivial.frag  trivial.vert
